appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      visible: ${output.wording.common.ios.permissionRegex}
      platform: iOS
    commands:
      - tapOn: ${output.wording.common.ios.allow}
- assertVisible: ${output.wording.cookies.consent.title}
- tapOn: ${output.wording.cookies.consent.choose}

- assertVisible: ${output.wording.cookies.settings.title}
- assertVisible: ${output.wording.cookies.settings.subtitle}
- scrollUntilVisible:
    element:
      text: ${output.wording.cookies.settings.policyLink}
- tapOn: ${output.wording.cookies.settings.policyLink}

- back

- tapOn:
    id: ${output.wording.common.back}

- assertVisible: ${output.wording.cookies.consent.title}
- tapOn: ${output.wording.cookies.consent.choose}

- assertVisible: ${output.wording.cookies.settings.title}
- assertVisible: ${output.wording.cookies.settings.subtitle}
- tapOn:
    id: ${output.wording.cookies.switches.customization.off}
- assertVisible:
    id: ${output.wording.cookies.switches.customization.on}
    enabled: true
- tapOn: ${output.wording.cookies.settings.save}
