appId: ${MAESTRO_APP_ID}
---
- tapOn:
    id: ${output.wording.favorite.addFavoriteId}
- tapOn:
    id: ${output.wording.common.backButton}

- scroll

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: ${output.wording.search.cdType}
          index: 3

- runFlow:
    when:
      platform: Android
    commands:
    - tapOn:
        text: ${output.wording.search.cdType}
        index: 1

- runFlow:
    when:
      platform: Android
      visible:
        id: ${output.wording.favorite.removeFavoriteId}
    commands:
      - tapOn:
          id: ${output.wording.common.backButton}
      - scroll
      - tapOn:
          text: ${output.wording.search.cdType}
          index: 3

- runFlow:
    when:
      platform: iOS
      visible:
        id: ${output.wording.favorite.removeFavoriteId}
    commands:
      - tapOn:
          id: ${output.wording.common.backButton}
      - scroll
      - tapOn:
          text: ${output.wording.search.cdType}

- tapOn:
    id: ${output.wording.favorite.addFavoriteId}
- tapOn:
    id: ${output.wording.common.backButton}

- scroll
- runFlow:
    when:
      platform: Android
      visible:
        id: ${output.wording.favorite.removeFavoriteId}
    commands:
      - tapOn:
          id: ${output.wording.common.backButton}
      - scroll
      - tapOn:
          text: ${output.wording.search.cdType}
          index: 3

- runFlow:
    when:
      platform: iOS
      visible:
        id: ${output.wording.favorite.removeFavoriteId}
    commands:
      - tapOn:
          id: ${output.wording.common.backButton}
      - scroll
      - tapOn:
          text: ${output.wording.search.cdType}
          index: 3

- runFlow:
    when:
      platform: iOS
    commands:
    - scroll
    - tapOn: 
        text: ${output.wording.search.cdType}
        index: 3
    - tapOn:
        id: ${output.wording.favorite.addFavoriteId}
    - tapOn:
        id: ${output.wording.common.backButton}

- runFlow:
    when:
      platform: Android
    commands:
    - tapOn:
        text: ${output.wording.search.cdType}
        index: 2
    - tapOn:
        id: ${output.wording.favorite.addFavoriteId}
    - tapOn:
        id: ${output.wording.common.backButton}
        retryTapIfNoChange: false
