appId: ${MAESTRO_APP_ID}
---
- assertVisible:
    text: ${output.wording.favorite.title}
- assertVisible: ${output.wording.favorite.count}

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          text: ${output.wording.favorite.deleteButton}
          index: 0
      - assertVisible: '2 favoris'
      - tapOn:
          text: ${output.wording.favorite.deleteButton}
          index: 0
      - assertVisible: '1 favori'
      - tapOn:
          text: ${output.wording.favorite.deleteButton}
          index: 0
      - assertVisible: ${output.wording.favorite.emptyText}

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: ${output.wording.favorite.deleteButton}
          index: 0
      - assertVisible: '2 favoris'
      - tapOn:
          text: ${output.wording.favorite.deleteButton}
          index: 0
      - assertVisible: '1 favori'
      - tapOn:
          text: ${output.wording.favorite.deleteButton}
          index: 0
      - assertVisible: ${output.wording.favorite.emptyText}
