appId: ${MAESTRO_APP_ID}
---
- assertVisible:
    id: "Trier"
- tapOn:
    id: "Trier"

- assertVisible: "Trier par"
- assertVisible: ".*Ajouté récemment.*"
- assertVisible: ".*Prix croissant.*"
- assertVisible: ".*Proximité géographique.*"

- tapOn: ".*Prix croissant.*"
- tapOn: "Valider"

- assertVisible: "3 favoris"
- tapOn:
    id: "Trier"

- tapOn: ".*Proximité géographique.*"

- runFlow:
    when:
      visible: "Paramètres de localisation"
    commands:
    - tapOn: "Fermer la modale"

- tapOn: "Valider"

- assertVisible: "3 favoris"
- tapOn:
    id: "Trier"

- tapOn: ".*Ajouté récemment.*"
- tapOn: "Valider"
- assertVisible: "3 favoris"