appId: ${MAESTRO_APP_ID}
---
- assertVisible:
    text: ${output.wording.favorite.title}
    index: 0
- repeat:
    while:
      notVisible: ${output.wording.favorite.emptyButton}
    commands:
      - tapOn: ${output.wording.favorite.deleteButton}
      
- tapOn: ${output.wording.favorite.emptyButton}