appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      visible: "Playlist hybride 3"
      platform: Android
    commands:
    - swipe:
        from:
          below: "Playlist hybride 3"
          index: 1
        direction: LEFT
    - tapOn: "En voir plus"
    - assertVisible: "Rechercher"
    - tapOn: "Revenir en arrière"
