appId: ${MAESTRO_APP_ID}
---
- waitForAnimationToEnd
- scrollUntilVisible:
    element: "OFFRES GRATUITES"
- tapOn:
    label: Accès à la Home N-1 OFFRES GRATUITES
    text: "OFFRES GRATUITES"
- pressKey: back

- tapOn:
    label: Accès à la Home N-1 MUSIQUE
    text: "MUSIQUE"
- pressKey: back

- tapOn:
    label: Accès à la Home N-1 CINÉMA
    text: "CINÉMA"
- pressKey: back

- tapOn:
    label: Accès à la Home N-1 LECTURE
    text: "LECTURE"
- pressKey: back

- tapOn:
    label: Accès à la Home N-1 SORTIES
    text: "SORTIES"
- pressKey: back

- tapOn:
    label: Accès à la Home N-1 SPECTACLES
    text: "SPECTACLES"
- pressKey: back