appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.common.welcome}
- waitForAnimationToEnd
- assertVisible: 'Débloque ton crédit'
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Débloque ton crédit'
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: 'Unlock'
- assertVisible: ${output.wording.auth.signup.title}
- assertVisible: 'Crée-toi un compte'
