appId: ${MAESTRO_APP_ID}
---
- scrollUntilVisible:
    element:
      text: 'Notifications et thèmes suivis'

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Notifications et thèmes suivis'

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Notifications et thèmes suivis'

- assertVisible:
    id: 'Autoriser les notifications - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Autoriser les notifications - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Suivre tous les thèmes - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Cinéma - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Lecture - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Musique - Interrupteur à bascule - non coché'
    enabled: false

- scroll

- assertVisible:
    id: 'Spectacles - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Activités créatives - Interrupteur à bascule - non coché'
    enabled: false

- assertVisible:
    id: 'Visites et sorties - Interrupteur à bascule - non coché'
    enabled: false

- tapOn:
    id: 'Revenir en arrière'
