appId: ${MAESTRO_APP_ID}
---
- scrollUntilVisible:
    element:
      text: ${output.wording.profil.legal.others}
- runFlow:
    when:
      visible: ${output.wording.profil.chatbot.askQuestion}
    commands:
      - tapOn: ${output.wording.profil.chatbot.askQuestion}
      - assertVisible: ${output.wording.profil.chatbot.virtualAssistant}

      - runFlow:
          file: ../../subFolder/cloud/commands/TapOnBack.yml

      - assertVisible: ${output.wording.profil.chatbot.askQuestion}
