appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.profil.settings}
- copyTextFrom:
    childOf: '.*€'

- evalScript: ${output.amountProfil = maestro.copiedText}
- tapOn:
    text: ${output.wording.profil.tabBar.home}
    index: 0
- assertVisible: 'Tu as ${output.amountProfil} sur ton pass'
