appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      true: ${MAESTRO_RUN_CLOUD_COMMANDS}
    commands:
      - scrollUntilVisible:
          element:
            text: ${output.wording.profil.legal.share}
- tapOn:
    text: ${output.wording.profil.confidentiality.title}

- assertVisible: ${output.wording.profil.confidentiality.settings}
- tapOn:
    id: ${output.wording.cookies.switches.all.on}
- scroll
- assertVisible: ${output.wording.cookies.settings.policyLink}
- tapOn: ${output.wording.cookies.settings.save}
