appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.profil.deletion.notAllowedTitle}
- tapOn: ${output.wording.profil.deletion.notAllowedTitle}
- assertVisible: ${output.wording.profil.deletion.backToProfileButton}
- assertVisible: ${output.wording.profil.deletion.disableNotifications}
- tapOn: ${output.wording.common.backButton}
