appId: ${MAESTRO_APP_ID}
---
- scrollUntilVisible:
    element:
      text: ${output.wording.profil.legal.others}
- assertVisible: ${output.wording.profil.helpCenter.title}
- tapOn: ${output.wording.profil.helpCenter.searchInfo}

- runFlow: # Si 1ere ouverture de chrome
    when:
      visible: ${output.wording.profil.helpCenter.unloggedFallback}
    commands:
      - tapOn: ${output.wording.profil.helpCenter.unloggedFallback}
      - tapOn: ${output.wording.common.noThanks}
      - pressKey: back

- runFlow:
    when:
      platform: Android
    file: ../../subFolder/cloud/commands/TapOnBack.yml

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.helpCenter.backToPass}
