appId: ${MAESTRO_APP_ID}
---
- scrollUntilVisible:
    element: ${output.wording.profil.legal.share}

- tapOn:
    text: ${output.wording.profil.legal.title}

- assertVisible: ${output.wording.profil.legal.title}
- tapOn:
    id: ${output.wording.profil.legal.cgu}
- waitForAnimationToEnd

- runFlow:
    when:
      platform: Android
    file: ../../subFolder/cloud/commands/DoubleTapOnBack.yml
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.helpCenter.backToPass}
      - tapOn: ${output.wording.common.backButton}
      - scrollUntilVisible:
          element: ${output.wording.profil.legal.share}

- runFlow: # Fallback si problème de retour
    when:
      visible: ${output.wording.profil.legal.others}
    commands:
      - tapOn:
          text: ${output.wording.profil.legal.title}

- tapOn: ${output.wording.profil.legal.privacyPolicy}
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    file: ../../subFolder/cloud/commands/DoubleTapOnBack.yml
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.helpCenter.backToPass}
      - tapOn: ${output.wording.common.backButton}
      - scrollUntilVisible:
          element: ${output.wording.profil.legal.share}
