appId: ${MAESTRO_APP_ID}
---
- scrollUntilVisible:
    element:
      text: ${output.wording.profil.social.version}
- tapOn: ${output.wording.profil.social.instagram}
- waitForAnimationToEnd

- runFlow: # Si 1ere ouverture de chrome
    when:
      visible: ${output.wording.profil.social.chromeAccept}
    commands:
      - tapOn: ${output.wording.profil.social.chromeAccept}
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: 'com.android.chrome:id/url_bar'
      - runFlow:
          file: ../../subFolder/cloud/commands/TapOnBack.yml

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.helpCenter.backToPass}
      - scrollUntilVisible:
          element:
            text: ${output.wording.profil.social.instagram}

- tapOn: ${output.wording.profil.social.x}
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: 'com.android.chrome:id/url_bar'
      - runFlow:
          file: ../../subFolder/cloud/commands/TapOnBack.yml

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.helpCenter.backToPass}
      - scrollUntilVisible:
          element:
            text: ${output.wording.profil.social.instagram}

- tapOn: ${output.wording.profil.social.tiktok}
- waitForAnimationToEnd
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible:
          id: 'com.android.chrome:id/url_bar'
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.helpCenter.backToPass}
      - scrollUntilVisible:
          element:
            text: ${output.wording.profil.social.instagram}

- runFlow: # Fallback si problème de retour
    when:
      visible: ${output.wording.profil.legal.welcomeGreeting}
    commands:
      - tapOn: ${output.wording.profil.tabBar.profil}
      - scrollUntilVisible:
          element:
            text: ${output.wording.profil.social.facebook}

- tapOn: ${output.wording.profil.social.facebook}
- waitForAnimationToEnd
# - TODO: Investiguer la 429 à l'ouverture du lien externe
# - tapOn: "Fermer"
# - assertVisible:
#     text: "Pass Culture"
#     index: 1
- runFlow:
    when:
      platform: Android
    commands:
      - pressKey: back

- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: ${output.wording.profil.helpCenter.backToPass}

- scrollUntilVisible:
    element:
      text: ${output.wording.profil.tabBar.profil}
    direction: UP
