appId: team.passculture.app.staging
---
- tapOn: 'Recherche'
- runFlow:
    when:
      visible: "J’accède au pass Culture sans mettre à jour mon navigateur"
    commands:
    - tapOn: "J’accède au pass Culture sans mettre à jour mon navigateur"
- assertVisible: 'Parcours les catégories'
- tapOn: "CINÉMA"
- assertVisible: 'Cinéma'
- tapOn: "Films à l'affiche"

- runFlow:
    when:
      visible: "Les artistes"
    commands:
    - assertVisible: ".*résultats"

- runFlow:
    when:
      notVisible: "Les artistes"
    commands:
    - assertVisible: "Pas de résultat"