appId: ${MAESTRO_APP_ID}
---
- tapOn: ${output.wording.search.filters.active}
- tapOn: ${output.wording.search.filters.price}
- tapOn: ${output.wording.search.filters.reset}
- tapOn: ${output.wording.search.filters.apply}
- tapOn: ${output.wording.search.title}
