appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.search.title}
- runFlow:
    when:
      platform: iOS
    commands:
      - scrollUntilVisible:
          element:
            text: ${output.wording.search.mediaCategory.ios}
      - tapOn: ${output.wording.search.mediaCategory.ios}

- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element:
            text: ${output.wording.search.mediaCategory.android}
      - tapOn: ${output.wording.search.mediaCategory.android}

- tapOn: ${output.wording.search.filters.active}
- tapOn: ${output.wording.search.filters.category}

- assertVisible: ${output.wording.search.mediaCategory.android} # Android and iOS share similar label here for assertion
- tapOn: ${output.wording.search.filters.digitalPress}
- tapOn: ${output.wording.search.filters.apply}

- tapOn: ${output.wording.search.title}
