appId: ${MAESTRO_APP_ID}
onFlowStart:
  - runScript: ../commons/getCurrentDay.js
---
- assertVisible: 'Rechercher'
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Catégorie Cinéma.*'

- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Cinéma'

- tapOn: "Films à l'affiche"

- tapOn: 'Voir tous les filtres : 1 filtre actif'

- tapOn: '.*Catégorie.*'

- assertVisible: "Films à l'affiche"
- tapOn: 'Appliquer le filtre'

- tapOn: 'Rechercher'
- tapOn: '.*Voir tous les filtres.*'
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: 'Filtre - Duo'
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'Duo'
- tapOn:
    id: 'Uniquement les offres duo - Interrupteur à bascule - non coché'
- tapOn: 'Appliquer le filtre'

- tapOn: '.*Dates.*'

- tapOn: '${output.targetDateTest}'
- tapOn: 'Appliquer le filtre'

- tapOn: 'Rechercher'
