appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.search.title}
- runFlow:
    when:
      platform: iOS
    commands:
    - scrollUntilVisible:
        element:
          text: ${output.wording.search.musicCategory.ios}
    - tapOn: ${output.wording.search.musicCategory.ios}
    - tapOn: ${output.wording.search.cds}


- runFlow:
    when:
      platform: Android
    commands:
    - scrollUntilVisible:
        element:
          text: ${output.wording.search.musicCategory.android}
    - tapOn: ${output.wording.search.musicCategory.android}
    - tapOn: ${output.wording.search.cds}
