appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.search.title}

- runFlow:
    when:
      platform: iOS
    commands:
      - scrollUntilVisible:
          element:
            text: ${output.wording.search.booksCategory.ios}
      - tapOn: ${output.wording.search.booksCategory.ios}
      - tapOn: ${output.wording.search.romanceCategory}

- runFlow:
    when:
      platform: Android
    commands:
      - scrollUntilVisible:
          element:
            text: ${output.wording.search.booksCategory.android}
      - tapOn: ${output.wording.search.booksCategory.android}
      - tapOn: ${output.wording.search.romanceCategory}

- runFlow:
    when:
      visible: ${output.wording.search.myPosition}
    commands:
      - tapOn: ${output.wording.search.myPosition}
      - tapOn: ${output.wording.search.franceEntire}

- tapOn: ${output.wording.search.filters.active}
- tapOn: ${output.wording.search.filters.category}

- tapOn: ${output.wording.search.filters.romance}
- tapOn: ${output.wording.search.filters.apply}
- tapOn: ${output.wording.search.title}

- swipe:
    from:
      text: ${output.wording.search.offersTitle}
    direction: UP
