appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.search.title}

- runFlow:
    when:
      visible: ${output.wording.search.myPosition}
    commands:
      - tapOn: ${output.wording.search.myPosition}
      - tapOn: ${output.wording.search.franceEntire}

- tapOn: ${output.wording.search.searchInCatalogue}

- inputText: 'totototototo'
- pressKey: Enter

- assertVisible: ${output.wording.search.noResult}
- assertVisible: 'pour "totototototo"'

- tapOn:
    id: ${output.wording.search.filters.all}
- tapOn: ${output.wording.search.filters.price}
- tapOn:
    id: ${output.wording.search.filters.maxPriceId}
- inputText: '50'
- pressKey: Enter
- tapOn: ${output.wording.search.filters.apply}

- tapOn: ${output.wording.search.filters.accessibility}

- tapOn: ${output.wording.search.filters.apply}

- tapOn: ${output.wording.search.title}
