appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'

- runFlow:
    when:
      visible: 'Ma position'
    commands:
      - tapOn: 'Ma position'
      - tapOn: 'Localisation – Liste - Élément 3 sur 3 - France entière.*'

- tapOn: 'Champs de texte - Rechercher dans le catalogue'

- inputText: 'One piece'
- pressKey: Enter

- tapOn:
    id: 'Voir tous les filtres'
- tapOn: '.*Prix.*'
- tapOn:
    id: 'Entrée pour le prix maximum'
- inputText: '50'
- pressKey: Enter
- tapOn: 'Appliquer le filtre'

- tapOn: '.*Accessibilité.*'

- tapOn: 'Appliquer le filtre'

- tapOn: 'Rechercher'

- runFlow:
    when:
      visible: '.*Les lieux culturels.*'
    commands:
    - swipe:
        from:
          text: ".*Les lieux culturels.*"
        direction: UP

- runFlow:
    when:
      visible: '.*Les offres.*'
    commands:
    - swipe:
        from:
          text: ".*Les offres.*"
        direction: UP

- extractTextWithAI:
    query: "Le titre exacte d'une des offres One Piece le plus court visible dans les résultats de recherche"
    outputVariable: 'physicalOfferTitle'
- tapOn: .*${physicalOfferTitle}.*