appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.onboarding.welcome.title}
- tapOn: ${output.wording.onboarding.welcome.button}

- assertVisible: ${output.wording.onboarding.discover.title}

- tapOn: ${output.wording.onboarding.discover.continue}

- runFlow:
    when:
      visible: ${output.wording.onboarding.location.deny}
    commands:
      - tapOn: ${output.wording.onboarding.location.deny}

- assertVisible: ${output.wording.onboarding.age.question}
- tapOn: ${output.wording.onboarding.age.options.age18}

- assertVisible: ${output.wording.onboarding.end.enjoy18}
- tapOn: ${output.wording.common.later}

- waitForAnimationToEnd
