appId: ${MAESTRO_APP_ID}
---
- assertVisible: ${output.wording.onboarding.welcome.title}
- tapOn: ${output.wording.onboarding.welcome.button}

- assertVisible: ${output.wording.onboarding.discover.title}
- tapOn: ${output.wording.onboarding.discover.continue}

- runFlow:
    when:
      visible: ${output.wording.onboarding.location.deny}
    commands:
      - tapOn: ${output.wording.onboarding.location.allow}

- assertVisible: ${output.wording.onboarding.age.question}
- tapOn: ${output.wording.onboarding.age.options.age19OrMore}

- assertVisible: ${output.wording.onboarding.end.explore}
- assertVisible: ${output.wording.common.createAccount}
- tapOn: ${output.wording.onboarding.end.accessCatalogue}

- waitForAnimationToEnd
