appId: ${MAESTRO_APP_ID}
---
- scroll
- extractTextWithAI:
    query: "Le titre exacte d'une des offres Livre visible dans les résultats de recherche"
    outputVariable: 'offerResult'
- tapOn: .*${offerResult}.*

- runFlow:
    when:
      platform: Android
    commands:
    - tapOn:
        id: offerBodyImage

- runFlow:
    when:
      platform: iOS
    commands:
    - tapOn: "Voir l’illustration en plein écran"

- runFlow:
    when:
      visible: 'Illustration 1 sur 2'
    commands:
      - assertVisible:
          text: Illustration 1 sur 2
      - swipe:
          direction: LEFT
      - assertVisible:
          text: Illustration 2 sur 2
      - swipe:
          direction: RIGHT

- runFlow:
    when:
      notVisible: 'Illustration 1 sur 2'
    commands:
      - assertVisible:
          text: Illustration 1 sur 1

- tapOn: Revenir en arrière
- tapOn: Revenir en arrière
