appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      true: ${MAESTRO_RUN_CLOUD_COMMANDS == 'true'}
    commands:
      - scrollUntilVisible:
          element: "A côté"
      - tapOn: "A côté"

- runFlow: 
    when:
      true: ${MAESTRO_RUN_CLOUD_COMMANDS == 'false'}
    commands:
      - scrollUntilVisible: 
            element: "A côté"
      - tapOn: "A côté"