appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Rechercher'
- runFlow:
    when:
      platform: iOS
    commands:
    - scrollUntilVisible:
        element:
          text: "Catégorie livre.*"
    - tapOn: 'Catégorie livre.*'
    - tapOn: 'Romans & littérature'


- runFlow:
    when:
      platform: Android
    commands:
    - scrollUntilVisible:
        element:
          text: "LIVRES"
    - tapOn: 'LIVRES'
    - tapOn: 'Romans & littérature'

- assertVisible: "Onglet 1/2 - Résultats - sélectionné"
- assertVisible: "Onglet 2/2 - Carte - non sélectionné"

- assertVisible: "Onglet 2/2 - Carte - non sélectionné"