appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      visible: 'Localisation'
    commands:
      - tapOn:
          text: '.*Choisir une zone géographique.*'
          point: '50%,25%'
      - tapOn:
          id: 'styled-input-container'
      - inputText: 'Paris'
      - tapOn: 'Paris Paris'
      - tapOn: 'Valider et voir sur la carte'

- assertVisible:
    text: 'Carte des lieux'
    optional: true
- runFlow: ../venue/VerifyMapFilter.yml
- tapOn: 'Revenir en arrière'
