appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Localisation'
- tapOn:
    text: '.*Choisir une zone géographique.*'
    point: '50%,25%'
- tapOn:
    id: 'styled-input-container'
- inputText: 'Paris'
- hideKeyboard
- tapOn: 'Paris0Paris'
- tapOn: 'Valider et voir sur la carte'

- assertVisible: 'Repère sur la carte'
- tapOn: 'Revenir en arrière'
