appId: ${MAESTRO_APP_ID}
tags:
  - venueMap
  - searchResultsMap
onFlowStart:
  - runScript: ../common/deeplinks/DeepLink.js
---
- runFlow: ../common/lifecycle/LaunchApp.yml
- runFlow: ../common/lifecycle/StopApp.yml
- runFlow: ../common/deeplinks/DeeplinkToHome.yml

- runFlow: ../common/navigation/GoToSearchFromTabBar.yml

- runFlow:
    commands:
      - assertVisible: 'Parcours les catégories'
      - scrollUntilVisible:
          element:
            text: 'Catégorie Spectacles'
      - tapOn: 'Catégorie Spectacles'

- assertVisible: 'Voir la carte'
- tapOn: 'Voir la carte'

- runFlow:
    commands:
      - assertVisible: 'Sélectionne ta localisation'
      - tapOn:
          text: '.*Choisir une zone géographique.*'
          point: '50%,25%'
      - tapOn:
          id: 'styled-input-container'
      - inputText: 'Paris'
      - tapOn: 'Paris Paris'
      - tapOn: 'Valider et voir sur la carte'

- assertVisible:
    id: 'venue-map-view-container'

- tapOn: 'Revenir en arrière'

- assertVisible: 'Les offres'
